WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128045
Saying "jitType() == JITCode::DFGJIT" is almost never correct
https://bugs.webkit.org/show_bug.cgi?id=128045
Summary
Saying "jitType() == JITCode::DFGJIT" is almost never correct
Filip Pizlo
Reported
2014-02-01 11:14:42 PST
JITCode::isOptimizingJIT(jitType()) is the right way to say it. There is at least one place in the profiling/debugging code where we make this mistake.
Attachments
the patch.
(2.16 KB, patch)
2014-02-01 12:15 PST
,
Mark Lam
fpizlo
: review+
Details
Formatted Diff
Diff
Oops missing a ')'. Here's the fixed patch for landing.
(2.16 KB, patch)
2014-02-01 12:22 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2014-02-01 11:59:51 PST
(In reply to
comment #0
)
> JITCode::isOptimizingJIT(jitType()) is the right way to say it. > > There is at least one place in the profiling/debugging code where we make this mistake.
That was deliberate because it was assumed that we would have never optimized to the FTL tier if the debugger or profiler is enabled. But I’ll be changing it anyway because we’ll want to enable the FTL as well soon.
Mark Lam
Comment 2
2014-02-01 12:15:35 PST
Created
attachment 222885
[details]
the patch.
Mark Lam
Comment 3
2014-02-01 12:22:30 PST
Created
attachment 222886
[details]
Oops missing a ')'. Here's the fixed patch for landing.
Mark Lam
Comment 4
2014-02-01 12:26:39 PST
Thanks. Landed in
r163247
: <
http://trac.webkit.org/r163247
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug