Saying "jitType() == JITCode::DFGJIT" is almost never correct. <http://webkit.org/b/128045>

Reviewed by Filip Pizlo.

JITCode::isOptimizingJIT(jitType()) is the right way to say it.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::addBreakpoint):
(JSC::CodeBlock::setSteppingMode):
* runtime/VM.cpp:
(JSC::SetEnabledProfilerFunctor::operator()):



Canonical link: https://commits.webkit.org/146065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163247 268f45cc-cd09-0410-ab3c-d52691b4dbfc